# zephyr_devenv

./: .clang-format  .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile.zephyr  devcontainer.json
firmware/: CMakeLists.txt  Kconfig  application.overlay  prj.conf
firmware/src/: Kconfig  main.c  my_zervice.h
simulation/: close-emulation  init-emulation  nrf52840.resc  renode-command  start-renode-server  start-uart-shell  stop-uart-shell
templates/: header.h  source.c
